chore: adiciona documentação OpenAPI para endpoints de notificações e usuários
- define os endpoints "/notifications/push_channels", "/notifications/send_push_to_device", e "/notifications/send_push_to_all" no "openapi.yaml"
- adiciona suporte à documentação dos métodos de notificações no "NotificationController"
- documenta os endpoints "/users/me" (GET e PATCH) no "openapi.yaml"
- inclui suporte à documentação dos métodos de usuários no "UserController"
- adiciona endpoint de status da API no "BaseController" e define no "openapi.yaml"
